<resources>
    <string name="app_name">Asignacion04_Calculadora_IMC</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="IMC">Calcular IMC</string>
    <string name="etiquetaIMC">Tu IMC es:</string>
    <string name="espera">Click en Calcular IMC para tu IMC</string>
    <string name="limpiar">Limpiar</string>
    <string name="indica1">Blanco: Bajo de peso</string>
    <string name="indica2">Verde: Peso normal</string>
    <string name="indica3">Naranja: Sobrepeso</string>
    <string name="indica4">Rojo: Obesidad</string>
    <string name="siEs">Si tu resultado es</string>
</resources>